pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      namespace: default
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: 058264408187.dkr.ecr.ap-south-1.amazonaws.com/wisecow:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
