service.yml

apiVersion: v1
kind: Service
metadata:
  name: wise-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 4499
      nodePort: 30003
